// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`covers cases shown in fixtures/esm-aggregation.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-declaration.js 1`] = `
"export const a = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'a'
  }
export const b = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'b'
  }
export const c = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'c'
  }
export const d = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'd'
  }
export const e = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'e'
  }
export const f = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'f'
  }
export const functionName = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'functionName'
  }
export const ClassName = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'ClassName'
  }
export const g = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'g'
  }
export const foo = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'foo'
  }
export const i = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'i'
  }
export const j = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-declaration.js',
    name: 'j'
  }"
`;

exports[`covers cases shown in fixtures/esm-default-class-anonymous.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-default-class-named.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-default-expression.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-default-function-anonymous.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-default-function-named.js 1`] = `""`;

exports[`covers cases shown in fixtures/esm-list.js 1`] = `
"export const a = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-list.js',
    name: 'a'
  }
export const b = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-list.js',
    name: 'b'
  }
export const d = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-list.js',
    name: 'd'
  }
export const e = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-list.js',
    name: 'e'
  }
export const c = {
    $$typeof: Symbol.for('react.module.reference'),
    filepath: 'file:/<PROJECT_ROOT>/packages/gatsby/src/utils/webpack/loaders/__tests__/fixtures/esm-list.js',
    name: 'c'
  }"
`;

exports[`covers cases shown in fixtures/no-client-export.js 1`] = `""`;
